# x3d-toggle-main

./: .gitignore  Makefile  README.md  deploy.sh  install.sh  meson.build  setup.sh  uninstall.sh
.github/: FUNDING.yml
.github/instructions/: *.instructions.md
.github/workflows/: c-cpp.yml  codeql.yml  makefile.yml  msvc.yml  sonarcloud.yml  super-linter.yml
config/: affinity.conf  games.conf  settings.conf
dev/: dev-install.sh  dev-uninstall.sh
dev/sandbox/: ide-install.json
dev/toolsets/codeql/: codeql-config.yml  install-deps.sh
docs/: ARCHITECTURE.md  x3d-toggle.1  x3d-toggle.1.md
include/: cli.h  cppc.h  daemon.h  error.h  games.h  ipc.h  libc.h  modes.h  scheduler.h  status.h  systemd.h
packaging/: 50-x3d_toggle-service.rules  PKGBUILD  x3d-toggle.desktop  x3d-toggle.service
scripts/framework/: assets.sh  ccd.sh  config.sh  ebpftool.sh  framework.sh  gui.sh  policies.sh  xui.sh
scripts/tools/: archive.sh  coredump.sh  debug.sh  linter.sh  reset.sh  rotate.sh
src/: affinity.c  error.c  games.c  libc.c  run.c  scheduler.c  socket.c  status.c  stress.c  sysfs.c  systemd.c  toggle.c  worker.c
src/cli/: cli.c  dialog.c  misc.c
src/daemon/: config.c  cppc.c  daemon.c  diag.c  modes.c
src/daemon/bpf/: bpf-user.c  bpf-user.h  bpf.c  vmlinux.h
src/daemon/polling/: polling.c
src/gtk4/: gui.c  stubs.c  theme.css  x3d-gui-resources.c  x3d-toggle-gui.gresource.xml  x3d-toggle.ui
